--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "husky": "^7.0.4",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "msw": "^0.38.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
